Set dropdown width to 0 to avoid overflow

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ canvas#search-image {
   right: 0;
   left: 0;
   top: 0;
+  width: 0;
 }
 
 /* Dropdown Content (Hidden by Default) */
